Allow x-timestamp and x-signature headers in CORS